# schedule_server

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  cmdParse.h  config.status  configure  configure.in  deamon.c  main.cpp  schedule.conf  schedule_server.pro
common/: commonFunction.cpp  commonFunction.h  dataStruct.h
dataLayer/: dataLayer.cpp  dataLayer.h
dataQueue/: dataQueue.cpp  dataQueue.h
database/: DBAdaptor.cpp  DBAdaptor.h
global/: cmdParse.h  config.h  shareMem.h
gsoap/: BasicHttpBinding_USCOREIFACE.nsmap  MygSoapProcess.cpp  MygSoapProcess.h  soapBasicHttpBinding_USCOREIFACEProxy.cpp  soapBasicHttpBinding_USCOREIFACEProxy.h  soapC.cpp  soapH.h  soapStub.h
httpSvr/: httpSvr.cpp  httpSvr.h
json/: jsonBuilder.cpp  jsonBuilder.h  jsonParser.cpp  jsonParser.h
logger/: logger.cpp  logger.h
processor/: processAddGroup.cpp  processAddGroup.h  processAddTemplate.cpp  processAddTemplate.h  processDelGroup.cpp  processDelGroup.h  processDelTemplate.cpp  processDelTemplate.h  processGetFaceInfo.cpp  processGetFaceInfo.h  processOneToN.cpp  processOneToN.h  processOneToOne.cpp  processOneToOne.h  processUploadImage.cpp  processUploadImage.h  processor.h  processorManager.cpp  processorManager.h
service/: sysService.cpp  sysService.h
syscfg/: cfgReader.cpp  cfgReader.h  sysConfig.cpp  sysConfig.h
templateServer/: templateServerProxy.cpp  templateServerProxy.h
tool/: dir.h  synclist.h  uuid.h
tool/base64/: base64.cpp  base64.h
