PROJECT(schedule_server)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "-g -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall")

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./tool/ini SRC_LIST)
AUX_SOURCE_DIRECTORY(./logger SRC_LIST)
AUX_SOURCE_DIRECTORY(./tool/base64 SRC_LIST)
AUX_SOURCE_DIRECTORY(./syscfg SRC_LIST)

LINK_LIBRARIES(pthread ccl)


ADD_EXECUTABLE(schedule_server ${SRC_LIST})
