PROJECT(schedule_server)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -std=c++11")

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./tool/ini SRC_LIST)
AUX_SOURCE_DIRECTORY(./logger SRC_LIST)
AUX_SOURCE_DIRECTORY(./tool/base64 SRC_LIST)
AUX_SOURCE_DIRECTORY(./syscfg SRC_LIST)
AUX_SOURCE_DIRECTORY(./service SRC_LIST)
AUX_SOURCE_DIRECTORY(./httpSvr SRC_LIST)
AUX_SOURCE_DIRECTORY(./json SRC_LIST)

LINK_LIBRARIES(pthread ccl microhttpd jsoncpp)


ADD_EXECUTABLE(schedule_server ${SRC_LIST})
