#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(deamon, 1.0)
AC_CONFIG_SRCDIR([deamon.c])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([sys/param.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_FORK
AC_OUTPUT(Makefile)
